<resources>
    <string name="app_name">Stock Hawk</string>
    <string name="stock_details">Details</string>

    <string name="action_settings">Settings</string>
    <string name="action_change_units">Change Units</string>
    <string name="symbol_search">Symbol Search</string>
    <string name="search_desc">Search for a Stock Symbol</string>
    <string name="input_hint" translatable="false">FB</string>
    <string name="network_toast">Uh-oh! This app requires an active Internet Connection to fetch up-to-date data.</string>
    <string name="stock_exists_toast">This stock is already saved!</string>
    <string name="accessibility_graph">Graph showing prices of the stock over time!</string>
    <string name="chart_description">Last 12 Months Stock Comparison</string>
    <string name="accessibility_progress_indicator">In Progress</string>
    <string name="bid_price">$%1$s</string>

    <string name="stock_name">Stock Name</string>
    <string name="stock_symbol">Stock Symbol</string>
    <string name="Currency">Currency</string>
    <string name="Earningsshare">Earning\'s Share</string>
    <string name="Marketcaptalization">Market Capitalization</string>
    <string name="Daylow">Day\'s low</string>
    <string name="Dayhigh">Day\'s high</string>
    <string name="Yearlow">Year\'s low</string>
    <string name="Yearhigh">Year\'s high</string>
    <string name="Lasttradedate">Last Trade Date</string>

    <!-- accessibility strings -->
    <string name="accessibility_new_stock">Add new stock</string>
    <string name="refresh">Refresh</string>

    <string name="content_authority" translatable="false">com.sam_chordas.android.stockhawk.data.QuoteProvider</string>
    <string name="widget_title" translatable="false">Stock Hawk Widget</string>

    <!-- Error strings -->
    <string name="empty_view_text">Stocks Data not available!</string>
    <string name="errorStatus" translatable="false">ErrorStatus</string>
    <string name="data_error_json">Looks like Something wrong on our end!!</string>
    <string name="list_server_down">The server is not returning data.</string>
    <string name="list_server_error">No Stock information available. The server is not returning valid data.</string>
    <string name="invalid_symbol">The stock symbol you have entered is invalid.</string>

</resources>
